tests/format/misc/errors/babel-flow/async-arrow-invalid.js
// https://github.com/babel/babel/pull/11979

<T> async () => {}
